blog: update thinkpad t14

--- a/blog/2022-04-27-thinkpad-t14.md
+++ b/blog/2022-04-27-thinkpad-t14.md
@@ -11,13 +11,15 @@ I just got a ThinkPad T14 Gen 1 AMD.
 
 - Sleep mode drains the battery
     - The T14 has S0ix ("Windows") and S3 ("Linux") sleep modes
-    - S3 sleep drains more power than S0ix
+    - S3 sleep drains more power than S0ix (**Fixed in UEFI Firmware 1.40**)
 - Sleep mode sometimes doesn't work
-    - This seems to be a kernel version problem, and also a distro problem
-    - Sometimes the laptop does not go to sleep, even if the lid is closed
-- Waking up from sleep takes ~10 seconds
-    - Waking up from sleep is instantaneous on Windows 
+    - This seems to be a kernel version problem (**Fixed in kernel 5.14**)
+    - Sometimes the laptop does not go to sleep, even if the lid is closed, this seems to be a distro / power management problem
+- Waking up from S0ix sleep takes ~10 seconds
+    - Waking up from sleep is instantaneous on Windows
+    - Waking up from S3 sleep with UEFI Firmware 1.40 and kernel 5.14 is instantaneous
 - TrackPoint stutters
+    - There is a workaround
 - Screen ghosting / burn-in
     - Only visible on a gray screen
 - Edges of the palmrest are sharp, unlike previous ThinkPads where the palmrest edges are slightly curved
